01_Admin/03_networkpolicy/yaml/networkpolicy-denyall.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: npdemo02
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
